[metadata]
name = BlockOL
version = 0.4
author = BlockOG
author_email = blockofgamingreal@gmail.com
description = The library which will be used by most of my scripts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
