[metadata]
name = BlockOL
version = 1.3.0
author = BlockOG
author_email = blockofgamingreal@gmail.com
description = The library which will be used by most of my scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlockOG/BlockOL
project_urls =
    Bug Tracker = https://github.com/BlockOG/BlockOL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
